<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo1"

    tools:context="com.example.android.project3quizapp.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCFFFFFF"

        >



         <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"

             android:text="@string/welcome"
             android:textSize="26sp"
             android:textColor="@color/colorAccent"
        android:textStyle="bold"/>
        <EditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeMsg"

        android:layout_marginLeft="16dp"

        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint"/>
        <Button
        android:id="@+id/starQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameField"
        android:layout_centerInParent="true"
            android:text="@string/beginbutton"
        android:textColor="@color/colorAccent"/>
    </RelativeLayout>







</RelativeLayout>
